CB-21447 Adjust Cloudera Manager jvm memory in case of data hub clusters based on the cluster size.
The logic works as follows:

- We get the current memory from /etc/default/cloudera-scm/server
config.
- Calculate the required value based on the node count.
- If more memory is needed than the current value then we check the
available memory with salt status.meminfo.
- We set CM's memory to min(available memory * 0.25, requiredMemory).
- If the required memory is less than the 25% of the available memory
than we send a warning to the user to recommend a vertical scale on
master host group.
- If the memory is changed than we restart CM and wait for it to become
available.

Data lake clusters are not touched. CM's default 4GB memory starts to cause issues after 400+ node clusters which is not the case for any data lake shape (not even EDL).